implement enemy AI and bullet script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Supercold.sln"
+    "dotnet.defaultSolution": "supercold.sln"
 }
